# StockPredictionAgent

./: .env.example  .gitattributes  .gitignore  README.md  WALKTHROUGH.md  pyproject.toml
.github/workflows/: daily-run.yml
data/decisions/: .gitkeep  2026-06-25.json  2026-06-26.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json
data/memory/: strategy_memory.json
data/reports/: .gitkeep  2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
scripts/: register_task.ps1  run_daily.ps1
src/market_journal/: __init__.py  config.py  features.py  graph.py  main.py  report.py  scoring.py  state.py
src/market_journal/agents/: __init__.py  llm.py  memory_agent.py  news_catalyst.py  performance_review.py  portfolio_committee.py  risk.py
src/market_journal/data/: __init__.py  cache.py  filings.py  macro.py  news.py  prices.py
src/market_journal/storage/: __init__.py  decisions.py  (+1 more)
tests/: conftest.py  helpers.py  test_features.py  test_graph_e2e.py  test_memory.py  test_performance_review.py  test_scoring.py
